[gd_scene load_steps=32 format=2]

[ext_resource path="res://Characters/UI/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Spider/enemy-vampire-spider-idle (1).png" type="Texture" id=2]
[ext_resource path="res://Characters/vampireSpider.gd" type="Script" id=3]
[ext_resource path="res://Images/Spider/enemy-vampire-spider-walk (1).png" type="Texture" id=4]
[ext_resource path="res://Images/Spider/enemy-vampire-spider-attack-2 (1).png" type="Texture" id=5]
[ext_resource path="res://Images/Spider/enemy-vampire-spider-attack (1).png" type="Texture" id=6]
[ext_resource path="res://Images/enemy-death-poof-big.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 59, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 118, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 177, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 59, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 118, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 177, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 236, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 44, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 44, 0, 44, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 88, 0, 44, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 59, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 118, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 177, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 59, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 118, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 177, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 236, 0, 59, 43 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 295, 0, 59, 43 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "melee",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "projectile",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=24]
radius = 45.0028

[node name="vampireSpider" type="KinematicBody2D" groups=[
"Baddies",
]]
position = Vector2( -4.89994, -8.01809 )
z_index = 5
z_as_relative = false
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.503914, 0.706305 )
frames = SubResource( 23 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.11362, 2.01808 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 24 )

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = -23.0
margin_top = -14.0
margin_right = 38.0
margin_bottom = -5.0
rect_scale = Vector2( 0.5, 0.5 )
[connection signal="health_updated" from="." to="HealthBar" method="_on_vampireSpider_health_updated"]
[connection signal="killed" from="." to="." method="_on_vampireSpider_killed"]
[connection signal="melee" from="." to="." method="_on_vampireSpider_melee"]
[connection signal="shoot" from="." to="." method="_on_vampireSpider_shoot"]
